@@ -25,6 +25,7 @@ along with obdgpslogger.  If not, see <http://www.gnu.org/licenses/>.
 #include <stdlib.h>
 #include <stdio.h>
 #include <math.h>
+#include <time.h>
 
 #include "singleheight.h"
 
@@ -96,7 +97,18 @@ void kmlvalueheight(sqlite3 *db, FILE *f, const char *name, const char *desc, co
 
 		int ismoving=1; // Set when the car is moving
 
+		int have_firstpos = 0;
+		double firstpos[3] = {0,0,0};
+		double lastpos[3] = {0,0,0};
+
 		while(SQLITE_ROW == sqlite3_step(stmt)) {
+			if(0 == have_firstpos) {
+				firstpos[2] = sqlite3_column_double(stmt, 2);
+				firstpos[1] = sqlite3_column_double(stmt, 1);
+				firstpos[0] = sqlite3_column_double(stmt, 0);
+				have_firstpos = 1;
+			}
+
 			float height = sqlite3_column_double(stmt, 0);
 			if(abs(height) > 0.001) {
 				ismoving = 1;
@@ -107,12 +119,42 @@ void kmlvalueheight(sqlite3 *db, FILE *f, const char *name, const char *desc, co
 			if(abs(height) < 0.001) {
 				ismoving = 0;
 			}
+
+			lastpos[2] = sqlite3_column_double(stmt, 2);
+			lastpos[1] = sqlite3_column_double(stmt, 1);
+			lastpos[0] = sqlite3_column_double(stmt, 0);
+
 		}
 
 		fprintf(f,"</coordinates>\n"
 			"</LineString>\n"
-			"</Placemark>\n"
-			"</Document>\n");
+			"</Placemark>\n");
+
+		// Now print start and end beacons
+		time_t *endt = (time_t)floor(end);
+		time_t *startt = (time_t)floor(start);
+
+		fprintf(f, "<Placemark>\n"
+			"<name>Start (%s)</name>\n"
+			"<Point>\n"
+			"<coordinates>\n"
+			"%f,%f,%f"
+			"</coordinates>\n"
+			"</Point>\n"
+			"</Placemark>\n", ctime(&startt),
+				firstpos[2],firstpos[1],firstpos[0]);
+
+		fprintf(f, "<Placemark>\n"
+			"<name>End (%s)</name>\n"
+			"<Point>\n"
+			"<coordinates>\n"
+			"%f,%f,%f"
+			"</coordinates>\n"
+			"</Point>\n"
+			"</Placemark>\n", ctime(&endt),
+				lastpos[2],lastpos[1],lastpos[0]);
+
+		fprintf(f,"</Document>\n");
 	}
 
 	sqlite3_finalize(stmt);
